[package]
name = "asyncsync"
description = "Runtime-agnostic synchronization primitives for asynchronous Rust"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/asyncsync-rs"
documentation = "https://docs.rs/asyncsync"
license = "MIT OR Apache-2.0"
publish = true

[features]
default = ["std"]
std = []
local = []

[dependencies]
futures = { version = "0.3.21", default-features = false }
parking_lot = "0.12.1"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros", "test-util"] }

[[bench]]
name = "notify"
path = "benches/notify.rs"
required-features = ["std", "local"]

[package.metadata.docs.rs]
all-features = true
